# iot-python-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  profile.json  pyproject.toml
.cursor/: cli.json  hooks.json  mcp.json
.cursor/commands/: create-ide-workflow.md  ctm_sync.md  guardrails-init-profile.md  srai-profile.md
.cursor/rules/: ctm_sync_rule.mdc  guardrails_rule.mdc  srai-security-review.mdc
.cursor/skills/guardrails-profiler/: SKILL.md
.cursor/skills/guardrails-profiler/references/: signal-registry.json
.cursor/skills/guardrails-selection/: SKILL.md
.cursor/skills/guardrails-selection/references/: category-threat-map.md
.cursor/skills/threat-modelling/: SKILL.md
.github/workflows/: semgrep-pr.yml
.guardrails/: profile.json
app/: __init__.py  aws_iot.py  config.py  iot_jobs.py  jobs.py  logging.py  models.py  remote_config.py  service.py  shadow.py  telemetry.py
tests/: test_config.py  test_shadow.py  test_telemetry.py
